sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:8: error: '(' expected but identifier found.
      if plusPetit(i+1,i) echange(i,i+1)
         ^AlgCocktailSort1:10: error: illegal start of simple expression
    }
    ^AlgCocktailSort1:12: error: '(' expected but identifier found.
      if plusPetit(i,i+1) echange(i,i+1)
         ^AlgCocktailSort1:14: error: illegal start of simple expression
    }
    ^